--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -1,31 +1,42 @@
 Vagrant.configure("2") do |config|
 
   config.vagrant.plugins = ["vagrant-libvirt"]
+  config.vm.synced_folder ".", "/vagrant", type: "rsync"
 
-  config.vm.define :arch, primary: true do |arch| # change :arch and |arch| and arch. to vm name
-
+  config.vm.define :arch, primary: true do |arch|
     arch.vm.box = "generic/arch" # change to desired vagrant box
     arch.vm.provision :shell, path: "provision.sh"
-
-    arch.vm.synced_folder ".", "/vagrant", type: "rsync" # type can be rsync, nfs, or smb
-
     arch.vm.provider :libvirt do |lv|
-
-      lv.qemu_use_session = false
-
       lv.cpus = 2
       lv.memory = 4096
       lv.video_vram = 128
-
-      lv.video_type = "virtio"
-      lv.graphics_type = "spice"
-
-      lv.channel :type => "unix", :target_name => "org.qemu.guest_agent.0", :target_type => "virtio"
-      lv.channel :type => "spicevmc", :target_name => "com.redhat.spice.0", :target_type => "virtio"
-
     end
-
   end
+
+  config.vm.provider :libvirt do |lv|
+    lv.cpus = 1
+    lv.memory = 2048
+    lv.video_vram = 128
+    lv.video_type = "virtio"
+    lv.graphics_type = "spice"
+    lv.qemu_use_session = false
+    lv.channel :type => "unix", :target_name => "org.qemu.guest_agent.0", :target_type => "virtio"
+    lv.channel :type => "spicevmc", :target_name => "com.redhat.spice.0", :target_type => "virtio"
+  end
+
+  # config.vm.define :debian do |debian|
+  #   debian.vm.box = "generic/debian11"
+  # end
+
+  # config.vm.define :fedora do |fedora|
+  #   fedora.vm.box = "generic/fedora37"
+  # end
+
+  # config.vm.define :windows do |windows|
+  #   windows.vm.box = "generic/windows11"
+  #   windows.vm.guest = :windows
+  #   windows.vm.communicator = "winrm"
+  # end
 
 end
 
