--- a/hacking/Vagrantfile
+++ b/hacking/Vagrantfile
@@ -1,31 +1,42 @@
 Vagrant.configure("2") do |config|
 
   config.vagrant.plugins = ["vagrant-libvirt"]
+  config.vm.synced_folder ".", "/vagrant", type: "rsync"
 
   config.vm.define :kali, primary: true do |kali|
-
     kali.vm.box = "kalilinux/rolling"
     kali.vm.provision :shell, path: "provision.sh"
-
-    kali.vm.synced_folder ".", "/vagrant", type: "rsync"
     # kali.vm.synced_folder "/home/rilstrats/nas/cyber", "/home/vagrant/cyber", type: "nfs"
-
     kali.vm.provider :libvirt do |lv|
+      lv.cpus = 4
+      lv.memory = 8192
+    end
+  end
 
-      lv.qemu_use_session = false
+  config.vm.provider :libvirt do |lv|
+    lv.cpus = 1
+    lv.memory = 2048
+    lv.video_vram = 128
+    lv.video_type = "virtio"
+    lv.graphics_type = "spice"
+    lv.qemu_use_session = false
+    lv.channel :type => "unix", :target_name => "org.qemu.guest_agent.0", :target_type => "virtio"
+    lv.channel :type => "spicevmc", :target_name => "com.redhat.spice.0", :target_type => "virtio"
+  end
 
+  config.vm.define :ubuntu do |ubuntu|
+    ubuntu.vm.box = "tmarchst/metasploitable3-ub1404"
+  end
+
+  config.vm.define :windows do |windows|
+    windows.vm.box = "tmarchst/metasploitable3-win2k8"
+    windows.vm.guest = :windows
+    windows.vm.communicator = "winrm"
+    windows.vm.provider :libvirt do |lv|
       lv.cpus = 2
       lv.memory = 4096
-      lv.video_vram = 128
-
-      lv.video_type = "virtio"
-      lv.graphics_type = "spice"
-
-      lv.channel :type => "unix", :target_name => "org.qemu.guest_agent.0", :target_type => "virtio"
-      lv.channel :type => "spicevmc", :target_name => "com.redhat.spice.0", :target_type => "virtio"
-
     end
-
   end
 
 end
+
