updated example vagrant

--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -9,7 +9,6 @@ Vagrant.configure("2") do |config|
     arch.vm.provider :libvirt do |lv|
       lv.cpus = 2
       lv.memory = 4096
-      lv.video_vram = 128
     end
   end
 
@@ -36,6 +35,10 @@ Vagrant.configure("2") do |config|
   #   windows.vm.box = "generic/windows11"
   #   windows.vm.guest = :windows
   #   windows.vm.communicator = "winrm"
+  #   windows.vm.provider :libvirt do |lv|
+  #     lv.cpus = 2
+  #     lv.memory = 4096
+  #   end
   # end
 
 end
