--- a/hacking/Vagrantfile
+++ b/hacking/Vagrantfile
@@ -8,8 +8,8 @@ Vagrant.configure("2") do |config|
     kali.vm.provision :shell, path: "provision.sh"
     # kali.vm.synced_folder "/home/rilstrats/nas/cyber", "/home/vagrant/cyber", type: "nfs"
     kali.vm.provider :libvirt do |lv|
-      lv.cpus = 4
-      lv.memory = 8192
+      lv.cpus = 2
+      lv.memory = 4096
     end
   end
 
@@ -24,19 +24,19 @@ Vagrant.configure("2") do |config|
     lv.channel :type => "spicevmc", :target_name => "com.redhat.spice.0", :target_type => "virtio"
   end
 
-  config.vm.define :ubuntu do |ubuntu|
-    ubuntu.vm.box = "tmarchst/metasploitable3-ub1404"
-  end
+  # config.vm.define :ubuntu do |ubuntu|
+  #   ubuntu.vm.box = "tmarchst/metasploitable3-ub1404"
+  # end
 
-  config.vm.define :windows do |windows|
-    windows.vm.box = "tmarchst/metasploitable3-win2k8"
-    windows.vm.guest = :windows
-    windows.vm.communicator = "winrm"
-    windows.vm.provider :libvirt do |lv|
-      lv.cpus = 2
-      lv.memory = 4096
-    end
-  end
+  # config.vm.define :windows do |windows|
+  #   windows.vm.box = "tmarchst/metasploitable3-win2k8"
+  #   windows.vm.guest = :windows
+  #   windows.vm.communicator = "winrm"
+  #   windows.vm.provider :libvirt do |lv|
+  #     lv.cpus = 2
+  #     lv.memory = 4096
+  #   end
+  # end
 
 end
 
