--- a/cit352/Vagrantfile
+++ b/cit352/Vagrantfile
@@ -1,32 +1,18 @@
 Vagrant.configure("2") do |config|
-
-  config.vagrant.plugins = ["vagrant-libvirt"]
-  config.vm.synced_folder ".", "/vagrant", type: "rsync"
-
   config.vm.define :fedora28, primary: true do |fedora28|
     fedora28.vm.box = "generic/fedora28"
     fedora28.vm.provision :shell, path: "fedora.sh"
     fedora28.vm.provider :libvirt do |lv|
       lv.cpus = 2
       lv.memory = 4096
+      lv.video_vram = 256
     end
   end
 
-  config.vm.provider :libvirt do |lv|
-    lv.cpus = 1
-    lv.memory = 2048
-    lv.video_vram = 128
-    lv.video_type = "virtio"
-    lv.graphics_type = "spice"
-    lv.qemu_use_session = false
-    lv.channel :type => "unix", :target_name => "org.qemu.guest_agent.0", :target_type => "virtio"
-    lv.channel :type => "spicevmc", :target_name => "com.redhat.spice.0", :target_type => "virtio"
-  end
-
-  config.vm.define :ubuntu14 do |ubuntu14|
-    ubuntu14.vm.box = "DIGITALR00TS/ubuntu1404"
-    ubuntu14.vm.provision :shell, path: "ubuntu14.sh"
-  end
+  # config.vm.define :ubuntu14 do |ubuntu14|
+  #   ubuntu14.vm.box = "DIGITALR00TS/ubuntu1404"
+  #   ubuntu14.vm.provision :shell, path: "ubuntu14.sh"
+  # end
 
   config.vm.define :ubuntu18 do |ubuntu18|
     ubuntu18.vm.box = "generic/ubuntu1804"
