--- a/cit352/Vagrantfile
+++ b/cit352/Vagrantfile
@@ -1,7 +1,7 @@
-Vagrant.configure("2") do |config|
+Vagrant.configure('2') do |config|
   config.vm.define :fedora28, primary: true do |fedora28|
-    fedora28.vm.box = "generic/fedora28"
-    fedora28.vm.provision :shell, path: "fedora.sh"
+    fedora28.vm.box = 'rilstrats/fedora28'
+    # fedora28.vm.provision :shell, path: 'fedora.sh'
     fedora28.vm.provider :libvirt do |lv|
       lv.cpus = 2
       lv.memory = 4096
@@ -15,9 +15,7 @@ Vagrant.configure("2") do |config|
   # end
 
   config.vm.define :ubuntu18 do |ubuntu18|
-    ubuntu18.vm.box = "generic/ubuntu1804"
-    ubuntu18.vm.provision :shell, path: "ubuntu18.sh"
+    ubuntu18.vm.box = 'generic/ubuntu1804'
+    ubuntu18.vm.provision :shell, path: 'ubuntu18.sh'
   end
-
 end
-
