--- a/cit352/Vagrantfile
+++ b/cit352/Vagrantfile
@@ -1,7 +1,11 @@
 Vagrant.configure('2') do |config|
   config.vm.define :fedora28, primary: true do |fedora28|
     fedora28.vm.box = 'rilstrats/fedora28'
+    # begin box creation
+    # fedora28.vm.box = 'generic/fedora28'
+    # fedora28.ssh.insert_key = false
     # fedora28.vm.provision :shell, path: 'fedora.sh'
+    # end box creation
     fedora28.vm.provider :libvirt do |lv|
       lv.cpus = 2
       lv.memory = 4096
