--- a/hacking/Vagrantfile
+++ b/hacking/Vagrantfile
@@ -1,7 +1,11 @@
-Vagrant.configure("2") do |config|
+Vagrant.configure('2') do |config|
   config.vm.define :kali, primary: true do |kali|
-    kali.vm.box = "kalilinux/rolling"
-    kali.vm.provision :shell, path: "provision.sh"
+    # kali.vm.box = "rilstrats/kali"
+    # begin box creation
+    kali.vm.box = 'kalilinux/rolling'
+    # kali.ssh.insert_key = false
+    kali.vm.provision :shell, path: 'provision.sh'
+    # end box creation
     # kali.vm.synced_folder "/home/rilstrats/nas/cyber", "/home/vagrant/cyber", type: "nfs"
     kali.vm.provider :libvirt do |lv|
       lv.cpus = 2
@@ -24,6 +28,4 @@ Vagrant.configure("2") do |config|
   #     lv.video_vram = 256
   #   end
   # end
-
 end
-
